# tdd-for-data-science

./: .gitignore  README.md  demonstration copy.ipynb  demonstration.ipynb  live_coding_demo_solution.ipynb  live_coding_pyconfr.ipynb  live_coding_pyconfr_solution.ipynb  load_data.py  notifier.py  pyproject.toml
tests/: test_performance.py
vscode-extension/: extension.js  jupyter-notifier-0.0.1.vsix  package.json
